--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ ordered-float = "4.6.0"
 ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
 # TODO: use the official version when thread-safing pr gets merged
 ratatui-explorer = { git = "https://github.com/SLUCHABLUB/ratatui-explorer" }
+rounded-div = "0.1.2"
 saturating_cast = "0.1.0"
 thiserror = "2.0.11"
 uuid = { version = "1.12.1", features = ["v4", "v7"] }
