--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,18 +10,16 @@ license = "Apache-2.0"
 
 [dependencies]
 bitbag = "0.3.0"
-bytemuck = "1.21.0"
 const-str = "0.6.1"
 crossterm = { version = "0.28.1", features = ["serde"] }
-educe = "0.6.0"
 hound = "3.5.1"
 itertools = "0.14.0"
 min-max = "0.1.8"
 num = "0.4.3"
 ordered-float = "4.6.0"
 ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
-# TODO: use the official version when thread-safing pr gets merged
-ratatui-explorer = { git = "https://github.com/SLUCHABLUB/ratatui-explorer" }
+ratatui-explorer = "0.1.3"
+rodio = "0.20.1"
 rounded-div = "0.1.2"
 saturating_cast = "0.1.0"
 thiserror = "2.0.11"
