--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,14 +16,13 @@ crossterm = { version = "0.28.1", features = ["serde"] }
 educe = "0.6.0"
 hound = "3.5.1"
 itertools = "0.14.0"
-min-max = "0.1.8"
+never = "0.1.0"
 num = "0.4.3"
 ordered-float = "4.6.0"
 ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
 # TODO: use the official version when thread-safing pr gets merged
 ratatui-explorer = { git = "https://github.com/SLUCHABLUB/ratatui-explorer" }
 rodio = "0.20.1"
-rounded-div = "0.1.2"
 saturating_cast = "0.1.0"
 strum = { version = "0.27.0", features = ["derive"] }
 thiserror = "2.0.11"
