--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,5 @@
-[package]
-name = "daur"
-version = "0.1.0"
-authors = ["SLUCHABLUB"]
-edition = "2021"
+[workspace]
+resolver = "2"
+members = ["daur-lib", "daur-tui"]
 
-readme = "README.md"
-repository = "https://github.com/SLUCHABLUB/daur"
-license = "Apache-2.0"
-
-[dependencies]
-arcstr = "1.2.0"
-bitbag = "0.3.0"
-const-str = "0.6.1"
-crossbeam = "0.8.4"
-crossterm = { version = "0.28.1", features = ["serde"] }
-educe = "0.6.0"
-hound = "3.5.1"
-itertools = "0.14.0"
-never = "0.1.0"
-num = "0.4.3"
-ordered-float = "5.0.0"
-ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
-# TODO: use the official version when thread-safing pr gets merged
-ratatui-explorer = { git = "https://github.com/SLUCHABLUB/ratatui-explorer" }
-rodio = "0.20.1"
-saturating_cast = "0.1.0"
-strum = { version = "0.27.1", features = ["derive"] }
-thiserror = "2.0.11"
+package.license = "Apache-2.0"
