--- a/daur-tui/Cargo.toml
+++ b/daur-tui/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "daur-tui"
 version = "0.1.0"
+authors = ["SLUCHABLUB"]
 edition = "2021"
 
 [dependencies]
 crossterm = { version = "0.28.1", features = ["serde"] }
-daur = { path = ".." }
+daur = { path = "../daur-lib" }
 ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
