--- a/daur-tui/Cargo.toml
+++ b/daur-tui/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 [dependencies]
 crossterm = { version = "0.28.1", features = ["serde"] }
 daur = { path = "../daur-lib" }
-ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
+ratatui = { version = "0.30.0-alpha.1" }
