--- a/daur-lib/Cargo.toml
+++ b/daur-lib/Cargo.toml
@@ -9,7 +9,7 @@ arcstr = "1.2.0"
 bitbag = "0.3.0"
 const-str = "0.6.1"
 crossbeam = "0.8.4"
-educe = "0.6.0"
+derive_more = { version = "2.0.1", features = ["debug", "from", "full"] }
 hound = "3.5.1"
 itertools = "0.14.0"
 # TODO: remove when `!` gets sabilised
