--- a/daur-tui/Cargo.toml
+++ b/daur-tui/Cargo.toml
@@ -7,4 +7,9 @@ edition = "2021"
 [dependencies]
 crossterm = { version = "0.28.1", features = ["serde"] }
 daur = { path = "../daur-lib" }
-ratatui = { version = "0.30.0-alpha.1" }
+ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
+# TODO: remove when "never_type" gets stabilised
+never = "0.1.0"
+rodio = "0.20.1"
+saturating_cast = "0.1.0"
+ratatui-explorer = "0.1.4"
