--- a/daur-lib/Cargo.toml
+++ b/daur-lib/Cargo.toml
@@ -17,6 +17,7 @@ hound = "3.5.1"
 itertools = "0.14.0"
 num = "0.4.3"
 ordered-float = "5.0.0"
+parking_lot = "0.12.3"
 saturating_cast = "0.1.0"
 strum = { version = "0.27.1", features = ["derive"] }
 thiserror = "2.0.11"
