--- a/daur-lib/Cargo.toml
+++ b/daur-lib/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2024"
 arcstr = "1.2.0"
 bitbag = "0.3.0"
 const-str = "0.6.1"
+closure = { git = "https://github.com/SLUCHABLUB/closure.git" }
 crossbeam = "0.8.4"
 derive_more = { version = "2.0.1", features = ["debug", "from", "full"] }
 dirs = "6.0.0"
