--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,7 @@ resolver = "2"
 members = ["daur-lib", "daur-tui"]
 
 package.license = "Apache-2.0"
+
+# TODO: remove when cpal fork gets merged
+[patch.crates-io]
+cpal = { git = "https://github.com/SLUCHABLUB/cpal.git" }
