--- a/clippy.toml
+++ b/clippy.toml
@@ -1,6 +1,8 @@
 avoid-breaking-exported-api = false
 arithmetic-side-effects-allowed = [
     # daur internal type names
+    "audio::Audio",
+    "audio::pair::Pair",
     "audio::sample::Sample",
     "pitch::Pitch",
     "ui::length::Length",
