--- a/daur-tui/Cargo.toml
+++ b/daur-tui/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "daur-tui"
 version = "0.1.0"
-authors = ["SLUCHABLUB"]
-edition = "2024"
+
+authors.workspace = true
+edition.workspace = true
+repository.workspace = true
+license.workspace = true
 
 [dependencies]
 crossterm = { version = "0.29.0", features = ["serde"] }
