--- a/daur-tui/Cargo.toml
+++ b/daur-tui/Cargo.toml
@@ -7,6 +7,9 @@ edition.workspace = true
 repository.workspace = true
 license.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 crossterm = { version = "0.29.0", features = ["serde"] }
 daur = { path = "../daur-lib" }
