Use core and alloc instead of std

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -153,8 +153,8 @@ shadow_same = "allow" # I do not find it problematic
 shadow_unrelated = "allow" # I do not find it problematic
 single_call_fn = "allow" # splitting functions aids readbility
 single_char_lifetime_names = "deny"
-# TODO: std_instead_of_alloc = "deny"
-# TODO: std_instead_of_core = "deny"
+std_instead_of_alloc = "deny"
+std_instead_of_core = "deny"
 str_to_string = "deny"
 string_add = "allow" # I do not suffer from commutativity normativity
 string_lit_chars_any = "deny"
