--- a/daur-tui/Cargo.toml
+++ b/daur-tui/Cargo.toml
@@ -13,6 +13,7 @@ workspace = true
 [dependencies]
 crossterm = { version = "0.29.0", features = ["serde"] }
 daur = { path = "../daur-lib" }
+non-zero = "0.1.0"
 ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
 saturating_cast = "0.1.0"
 unicode-segmentation = "1.12.0"
