--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,4 +78,6 @@ shadow_reuse = "allow" # I do not find it problematic
 shadow_same = "allow" # I do not find it problematic
 shadow_unrelated = "allow" # I do not find it problematic
 single_call_fn = "allow" # splitting functions aids readbility
+std_instead_of_alloc = "allow" # we need std
+std_instead_of_core = "allow" # we need std
 string_add = "allow" # I do not suffer from commutativity normativity
