--- a/daur-lib/Cargo.toml
+++ b/daur-lib/Cargo.toml
@@ -34,3 +34,4 @@ anyhow = "1.0.98"
 non-zero = "0.1.0"
 mitsein = { version = "0.6.1", features = ["indexmap"] }
 indexmap = "2.9.0"
+remain = "0.2.15"
