--- a/daur-lib/Cargo.toml
+++ b/daur-lib/Cargo.toml
@@ -16,7 +16,7 @@ bitbag = "0.3.0"
 const-str = "0.6.1"
 closure = { git = "https://github.com/SLUCHABLUB/closure.git" }
 crossbeam = "0.8.4"
-derive_more = { version = "2.0.1", features = ["debug", "from", "full"] }
+derive_more = { version = "2.0.1", features = ["full"] }
 dirs = "6.0.0"
 # TODO: use the official version when clone-getters get added
 getset = { git = "https://github.com/SLUCHABLUB/getset.git" }
