--- a/daur-lib/Cargo.toml
+++ b/daur-lib/Cargo.toml
@@ -35,3 +35,7 @@ non-zero = "0.1.0"
 mitsein = { version = "0.6.1", features = ["indexmap"] }
 indexmap = "2.9.0"
 remain = "0.2.15"
+clack-host = { git = "https://github.com/prokopyl/clack.git", version = "0.1.0", features = ["clack-plugin"] }
+clack-plugin = { git = "https://github.com/prokopyl/clack.git", version = "0.1.0" }
+sorted-vec = "0.8.6"
+ux = "0.1.6"
