Rework time conversion.

--- a/clippy.toml
+++ b/clippy.toml
@@ -9,16 +9,19 @@ arithmetic-side-effects-allowed = [
     "metre::duration::non_zero::NonZeroDuration",
     "metre::instant::Instant",
     "metre::relative::instant::Instant",
+    "metre::time_signature::TimeSignature",
+    "metre::changing::Changing",
     "note::pitch::Pitch",
+    "ratio::non_zero::NonZeroRatio",
+    "ratio::Ratio",
+    "time::duration::Duration",
+    "time::instant::Instant",
+    "time::period::Period",
     "ui::direction::Direction",
     "ui::length::Length",
     "ui::offset::Offset",
     "ui::point::Point",
     "ui::vector::Vector",
-    "ratio::Ratio",
-    "ratio::non_zero::NonZeroRatio",
-    "time::instant::Instant",
-    "time::duration::Duration",
 
     # type names for other crates
     "daur::audio::Sample",
