--- a/daur-tui/Cargo.toml
+++ b/daur-tui/Cargo.toml
@@ -11,6 +11,7 @@ license.workspace = true
 workspace = true
 
 [dependencies]
+ascii = "1.1.0"
 crossterm = { version = "0.29.0", features = ["serde"] }
 daur = { path = "../daur-lib" }
 non-zero = "0.1.0"
