--- a/daur-lib/Cargo.toml
+++ b/daur-lib/Cargo.toml
@@ -18,7 +18,6 @@ const-str = "0.6.1"
 closure = { git = "https://github.com/SLUCHABLUB/closure.git" }
 crossbeam = "0.8.4"
 derive_more = { version = "2.0.1", features = ["debug"] }
-dirs = "6.0.0"
 # TODO: use the official version when clone-getters get added
 getset = { git = "https://github.com/SLUCHABLUB/getset.git" }
 itertools = "0.14.0"
@@ -39,3 +38,4 @@ typed-builder = "0.21.0"
 log = "0.4.27"
 symphonia = { version = "0.5.4", features = ["all"] }
 bytemuck = { version = "1.23.0", features = ["derive"] }
+hound = "3.5.1"
