--- a/daur-tui/Cargo.toml
+++ b/daur-tui/Cargo.toml
@@ -11,10 +11,14 @@ license.workspace = true
 workspace = true
 
 [dependencies]
+anyhow = "1.0.100"
 ascii = "1.1.0"
 crossterm = { version = "0.29.0", features = ["serde"] }
 daur = { path = "../daur-lib" }
+directories = "6.0.0"
 non-zero = "0.1.0"
 ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
 saturating_cast = "0.1.0"
+serde = "1.0.228"
+toml = "0.9.10"
 unicode-width = "0.2.2"
