--- a/daur-lib/Cargo.toml
+++ b/daur-lib/Cargo.toml
@@ -11,16 +11,16 @@ license.workspace = true
 workspace = true
 
 [dependencies]
+# TODO: Sort into public and private.
 anyhow = "1.0.98"
 arcstr = "1.2.0"
-bitbag = "0.3.0"
 bytemuck = { version = "1.23.0", features = ["derive"] }
 const-str = "0.7.1"
 crossbeam = "0.8.4"
 derive_more = { version = "2.0.1", features = ["debug"] }
 executors = "0.10.0"
 hound = "3.5.1"
-indexmap = "2.9.0"
+indexmap = { version = "2.9.0", features = ["serde"] }
 itertools = "0.14.0"
 mitsein = { version = "0.8.0", features = ["indexmap"] }
 non-zero = "0.1.0"
@@ -39,5 +39,11 @@ typed-builder = "0.23.2"
 # TODO: remove
 closure = { git = "https://github.com/SLUCHABLUB/closure.git" }
 
-# TODO: use the official version when clone-getters get added
+# TODO: Use the official version when `EnumSet` is thread safe.
+enumset = { git = "https://github.com/SLUCHABLUB/enumset.git", features = ["serde"] }
+
+# TODO: Use the official version when clone-getters get added.
 getset = { git = "https://github.com/SLUCHABLUB/getset.git" }
+
+[dev-dependencies]
+toml = "0.9.10"
