--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -27,6 +27,7 @@ const-str = "0.7.1"
 crossbeam = "0.8.4"
 derive_more = { version = "2.0.1", features = ["debug"] }
 executors = "0.10.0"
+getset = "0.1.6"
 hound = "3.5.1"
 itertools = "0.14.0"
 non-zero = "0.1.0"
@@ -45,9 +46,6 @@ strum = { version = "0.27.1", features = ["derive"] }
 
 # TODO: Use the official version when `EnumSet` is thread safe.
 enumset = { git = "https://github.com/SLUCHABLUB/enumset.git", features = ["serde"] }
-
-# TODO: Use the official version when clone-getters get added.
-getset = { git = "https://github.com/SLUCHABLUB/getset.git" }
 
 [dev-dependencies]
 toml = "0.9.10"
