--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ shadow_unrelated = "allow"
 single_call_fn = "allow"
 pattern_type_mismatch = "allow"
 pub_use = "allow" # Reexports allow for smaller files.
+unneeded_field_pattern = "allow"
 
 # Allowing exhaustive matching is good in most cases IMO.
 exhaustive_enums = "allow"
