--- a/examples/toml/empty.toml
+++ b/examples/toml/empty.toml
@@ -1,5 +1,6 @@
 name = ""
 time_signature = [4, 4]
+tracks = []
 
 [tempo]
 bpm = 180
@@ -8,5 +9,3 @@ bpm = 180
 tonic = "A"
 sign = "sharp"
 intervals = ["M2", "m3", "P4", "P5", "m6", "m7"]
-
-[tracks]
