--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -23,6 +23,7 @@ symphonia = { version = "0.5.4", features = ["all"] }
 
 # Non-public dependencies.
 
+bon = "3.8.2"
 bytemuck = { version = "1.23.0", features = ["derive"] }
 const-str = "0.7.1"
 crossbeam = "0.8.4"
@@ -40,7 +41,6 @@ rubato = "0.16.2"
 saturating_cast = "0.1.0"
 toml = "0.9.10"
 thiserror = "2.0.11"
-typed-builder = "0.23.2"
 
 # TODO: Use the official version when `EnumSet` is thread safe.
 enumset = { git = "https://github.com/SLUCHABLUB/enumset.git", features = ["serde"] }
